vertical spacing fix.

--- a/app/styles/ilios-common/components/learnergroup-selection-manager.scss
+++ b/app/styles/ilios-common/components/learnergroup-selection-manager.scss
@@ -10,6 +10,7 @@
 
     .tree-groups-list label {
       font-weight: inherit;
+      margin-bottom: 0;
     }
 
     & > ul {
